--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css",
-              "bootstrap/dist/css/bootstrap.css"
+              "bootstrap/dist/css/bootstrap.css",
+              "bootstrap-icons/font/bootstrap-icons.css",
+              "src/styles.css"
             ],
             "scripts": [
               "bootstrap/dist/js/bootstrap.js"
