--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "angular-highcharts": "^12.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.6.0",
+    "highcharts": "^9.2.2",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
