--- a/angular.json
+++ b/angular.json
@@ -24,12 +24,11 @@
               "src/assets"
             ],
             "styles": [
-              "bootstrap/dist/css/bootstrap.css",
-              "bootstrap-icons/font/bootstrap-icons.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-              "bootstrap/dist/js/bootstrap.js"
             ]
           },
           "configurations": {
@@ -40,7 +39,13 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "optimization": true,
+              "optimization": {
+                "scripts": true,
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": false
+                }
+              },
               "outputHashing": "all",
               "sourceMap": false,
               "namedChunks": false,
@@ -123,6 +128,5 @@
         }
       }
     }
-  },
-  "defaultProject": "pokedex-angu"
+  }
 }
