--- a/angular.json
+++ b/angular.json
@@ -3,130 +3,121 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "pokedex-angu": {
-      "projectType": "application",
-      "schematics": {},
-      "root": "",
-      "sourceRoot": "src",
-      "prefix": "app",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist/pokedex-angu",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.app.json",
-            "aot": true,
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
-            ],
-            "scripts": [
-            ]
+      "pokedex-angular": {
+          "projectType": "application",
+          "schematics": {
+              "@schematics/angular:application": {
+                  "strict": true
+              }
           },
-          "configurations": {
-            "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": {
-                "scripts": true,
-                "styles": {
-                  "minify": true,
-                  "inlineCritical": false
-                }
+          "root": "",
+          "sourceRoot": "src",
+          "prefix": "app",
+          "architect": {
+              "build": {
+                  "builder": "@angular-devkit/build-angular:browser",
+                  "options": {
+                      "outputPath": "dist/pokedex-angular",
+                      "index": "src/index.html",
+                      "main": "src/main.ts",
+                      "polyfills": "src/polyfills.ts",
+                      "tsConfig": "tsconfig.app.json",
+                      "assets": [
+                          "src/favicon.ico",
+                          "src/assets"
+                      ],
+                      "styles": [
+                          "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+                          "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                          "src/styles.css"
+                      ],
+                      "scripts": [
+                        "node_modules/bootstrap/dist/js/bootstrap.min.js"
+                      ]
+                  },
+                  "configurations": {
+                      "production": {
+                          "assets": [
+                              "src/favicon.ico",
+                              "src/assets",
+                              "src/web.config"
+                          ],
+                          "budgets": [{
+                                  "type": "initial",
+                                  "maximumWarning": "5mb",
+                                  "maximumError": "10mb"
+                              },
+                              {
+                                  "type": "anyComponentStyle",
+                                  "maximumWarning": "5mb",
+                                  "maximumError": "10mb"
+                              }
+                          ],
+                          "fileReplacements": [{
+                              "replace": "src/environments/environment.ts",
+                              "with": "src/environments/environment.prod.ts"
+                          }],
+                          "optimization": {
+                              "scripts": true,
+                              "styles": {
+                                  "minify": true,
+                                  "inlineCritical": false
+                              }
+                          },
+                          "outputHashing": "all"
+                      },
+                      "development": {
+                          "assets": [
+                              "src/favicon.ico",
+                              "src/assets",
+                              "src/web.config"
+                          ],
+                          "buildOptimizer": false,
+                          "optimization": false,
+                          "vendorChunk": true,
+                          "extractLicenses": false,
+                          "sourceMap": true,
+                          "namedChunks": true
+                      }
+                  },
+                  "defaultConfiguration": "production"
               },
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
-                }
-              ]
-            }
+              "serve": {
+                  "builder": "@angular-devkit/build-angular:dev-server",
+                  "configurations": {
+                      "production": {
+                          "browserTarget": "pokedex-angular:build:production"
+                      },
+                      "development": {
+                          "browserTarget": "pokedex-angular:build:development"
+                      }
+                  },
+                  "defaultConfiguration": "development"
+              },
+              "extract-i18n": {
+                  "builder": "@angular-devkit/build-angular:extract-i18n",
+                  "options": {
+                      "browserTarget": "pokedex-angular:build"
+                  }
+              },
+              "test": {
+                  "builder": "@angular-devkit/build-angular:karma",
+                  "options": {
+                      "main": "src/test.ts",
+                      "polyfills": "src/polyfills.ts",
+                      "tsConfig": "tsconfig.spec.json",
+                      "karmaConfig": "karma.conf.js",
+                      "assets": [
+                          "src/favicon.ico",
+                          "src/assets"
+                      ],
+                      "styles": [
+                          "src/styles.css"
+                      ],
+                      "scripts": []
+                  }
+              }
           }
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "pokedex-angu:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "pokedex-angu:build:production"
-            }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "pokedex-angu:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "pokedex-angu:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "pokedex-angu:serve:production"
-            }
-          }
-        }
       }
-    }
   }
 }
