--- a/package.json
+++ b/package.json
@@ -5,39 +5,40 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "deploy:ghdocs":"ng build --configuration=production --output-path docs --base-href /pokedex-angular/"
+    "build:dev": "ng build --watch --deploy-url /ginter/ --base-href /ginter/",
+    "watch": "ng build --watch --configuration development",
+    "deploy:ghdocs": "ng build --configuration=production --output-path docs --base-href /pokedex-angular/"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
+    "@angular/animations": "^14.2.1",
+    "@angular/cdk": "^14.2.1",
+    "@angular/common": "^14.2.1",
+    "@angular/compiler": "^14.2.1",
+    "@angular/core": "^14.2.1",
+    "@angular/fire": "^7.4.1",
+    "@angular/forms": "^14.2.1",
+    "@angular/platform-browser": "^14.2.1",
+    "@angular/platform-browser-dynamic": "^14.2.1",
+    "@angular/router": "^14.2.1",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
-    "bootstrap": "^5.0.0",
+    "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.10.4",
     "highcharts": "^10.3.3",
-    "i": "^0.3.7",
     "ng2-search-filter": "^0.5.1",
-    "npm": "^9.6.4",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "^7.5.6",
+    "tslib": "^2.4.0",
+    "web-pack": "^1.0.0",
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.11",
-    "@angular/cli": "~14.2.11",
-    "@angular/compiler-cli": "^14.2.0",
-    "@angular/localize": "^14.2.0",
+    "@angular-devkit/build-angular": "^14.2.1",
+    "@angular/cli": "~14.2.1",
+    "@angular/compiler-cli": "^14.2.1",
+    "@angular/localize": "^14.2.1",
     "@types/jasmine": "~4.0.0",
+    "@types/node": "^18.7.16",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
